correct infinite on delay

--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
 						<span class="thicker-stroke" id="ammo-text-stroke"></span>
 					</div>
 					<div class="delay-text-container" id="delay-text-container">
-						<span class="bold-text" id="delay-text"></span>
-						<span class="thicker-stroke" id="delay-text-stroke"></span>
+						<span class="bold-text delay-text" id="delay-text"></span>
+						<span class="thicker-stroke delay-text-stroke" id="delay-text-stroke"></span>
 					</div>
 					<!-- old flavor text -->
 					<!-- <span class="flavor-text no-outline" id="flavor-text"></span> -->
