--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 	<!-- for screenshotting -->
 	<script src="src/script/html2canvas.js"></script>
 	<!-- main script -->
-	<script src="cardeditor.js"></script>
+	<script type="module" src="cardeditor.js"></script>
 </body>
 
 </html>
