--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 		<!-- for screenshotting -->
 <script src="src/script/html2canvas.js"></script>
 	<!-- main script -->
-<script type="module" src="cardeditor.js"></script>
+<script type="module" src="./cardeditor.js"></script>
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BCS Custom Cards</title>
-	<link rel="stylesheet" href="cardeditor.css">
+	<link rel="stylesheet" href="./cardeditor.css">
 	<!-- temp favicon -->
-	<link rel="icon" type="image/x-icon" href="/src/img/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./src/img/favicon.ico">
 </head>
 
 <body>
